<resources>
    <string name="rumahsehat">Rumah Sehat</string>
    <string name="tempatibadah">Tempat Ibadah</string>
    <string name="pasar">Pasar</string>
    <string name="sekolah">Sekolah</string>
    <string name="pesantren">Pesantren</string>
    <string name="kolamrenang">Kolam Renang</string>
    <string name="fasilitaskesehatan">Fasilitas Kesehatan</string>
    <string name="hotel">Hotel</string>
    <string name="hotelmelati">Hotel Melati</string>
    <string name="puskesmas">Puskesmas</string>
    <string name="rumahsakit">Rumah Sakit</string>
    <string name="klinik">Klinik</string>
    <string name="jasaboga">Pemeriksaan Jasa Boga</string>
    <string name="rumahmakan">Restoran</string>
    <string name="depotairminum">Depot Air Minum</string>
    <string name="kesling">Kesehatan Lingkungan</string>
    <string name="app_name">app_name</string>
    <string name="semua">Semua</string>
    <string name="contohnamaprofile">Siti Aminah</string>
    <string name="contohlokasikader">Kader UPT Puskesmas Limo</string>
    <string name="contohEmail">sitiaminah_grogol@gmail.com</string>
    <string name="contohPassword">test123</string>
    <string name="andatelah">Anda telah melakukan pendataan sebanyak:</string>
    <string name="jumlahpendataan">540</string>
    <string name="kali">kali</string>
    <string name="terakhirmelakukan">Terakhir melakukan pendataan:</string>
    <string name="waktu">03/05/2019 10:39:19</string>
    <string name="bergabungpada">03/05/2019 10:39:19</string>
    <string name="logout">Logout</string>
    <string name="xpendataan">x Pendataan</string>
    <string name="profilkader">Profil Kader</string>
    <string name="pesan">Pesan</string>
    <string name="riwayatpendataan">Riwayat Pendataan</string>
    <string name="reward">Reward</string>
    <string name="sippkling">SIPP KLING</string>
    <string name="singkatan">Sistem Informasi Pemetaan Profil Lingkungan</string>
    <string name="suhucuaca">15</string>
    <string name="lainnya">Lainnya</string>
    <string name="pendataanutama">Pendataan Utama</string>
    <string name="tempatumum">Tempat-tempat Umum</string>
    <string name="pelayanankesling">Pelayanan Kesehatan Lingkungan</string>
    <string name="tempatpengelolaanmakanan">Tempat Pengelolaan Makanan</string>
    <string name="kategori">Kategori</string>
    <string name="namakk">Nama Kepala Keluarga</string>
    <string name="contohnamakk">AndiWijaya</string>
    <string name="nomorkk">Nomor Kepala Keluarga</string>
    <string name="contohnomorkk">317401029930014</string>
    <string name="Alamat">Alamat</string>
    <string name="namajalan">Jl. Swasembada No. 5</string>
    <string name="rtrw">Rt. 004 Rw. 05 No.15</string>
    <string name="kelurahankecamatan">Kel. Grogol, Kec. Limo, Depok</string>
    <string name="skorakhir">Skor Akhir/Status</string>
    <string name="contohskor">1108</string>
    <string name="garing">/</string>
    <string name="Status">Rumah Tidak Sehat</string>
    <string name="titikkoordinat">Titik Koordinat</string>
    <string name="koordinatx">-6.261206</string>
    <string name="koma">,</string>
    <string name="koordinaty">106.809272</string>
    <string name="directme">Direct Me</string>
    <string name="editdata">Edit Data</string>
    <string name="melakukanpendataan">melakukan pendataan</string>
    <string name="peringkat">Peringkat</string>
    <string name="tingkatperingkat">1</string>
    <string name="loremipsum">LoremIpsum</string>

</resources>
