<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
            android:id="@+id/atas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
    >

    <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/background2"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/background2"
    />
    <RelativeLayout
            android:layout_marginTop="-170dp"
            android:id="@+id/bagianfoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
    >
        <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/fotoProfile"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/blankprofile"
                android:layout_marginTop="140dp"
                android:layout_centerHorizontal="true"
        />
        <RelativeLayout
                android:id="@+id/bagiannama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fotoProfile"
                android:layout_centerHorizontal="true"
        >
            <TextView
                    android:id="@+id/txtNamaKader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contohnamaprofile"
                    android:gravity="center"
                    app:fontFamily="@font/gotham_semibold"
                    android:layout_centerHorizontal="true"
            />
            <ImageView
                    android:contentDescription="@string/app_name"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_toEndOf="@id/txtNamaKader"
                    android:src="@drawable/edit"
                    android:layout_marginStart="5dp"
            />
        </RelativeLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contohlokasikader"
                android:layout_below="@id/bagiannama"
                app:fontFamily="@font/gotham_light"
                android:textSize="@dimen/average"
                android:textColor="#3fb286"
        />

    </RelativeLayout>
    </LinearLayout>


        <LinearLayout
                android:id="@+id/inputEmailPass"
                app:layout_constraintTop_toBottomOf="@id/atas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:padding="20dp">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:contentDescription="@string/app_name"
                        android:id="@+id/emailPic"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/amplop"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                />
                <EditText
                        android:labelFor="@id/email"
                        android:autofillHints="@string/contohEmail"
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/emailPic"
                        android:layout_marginEnd="10dp"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/average"
                        android:fontFamily="@font/gotham_light"
                        tools:ignore="UnusedAttribute"/>
            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
            >

                <ImageView
                        android:contentDescription="@string/app_name"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/lock"
                        android:id="@+id/lockPic"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                />
                <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/contohPassword"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@id/lockPic"
                        android:inputType="textPassword"
                        android:textSize="@dimen/average"
                        android:labelFor="@id/password"
                        app:fontFamily="@font/gotham_light"
                        tools:ignore="UnusedAttribute"/>

                <ImageView
                        android:contentDescription="@string/app_name"
                        android:id="@+id/editPassword"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/edit"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="20dp"
                />
            </RelativeLayout>

        </LinearLayout>


    <RelativeLayout
            android:id="@+id/infoPendataan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/inputEmailPass"
            android:layout_marginTop="25dp"
            android:gravity="center">
        <TextView
                android:id="@+id/andatelah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/andatelah"
                app:fontFamily="@font/gotham_light"
                android:textSize="@dimen/average"
                android:gravity="center"
        />
        <TextView
                android:id="@+id/txtJumlahPendataan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/andatelah"
                android:text="@string/jumlahpendataan"
                android:textSize="12sp"
                app:fontFamily="@font/gotham_semibold"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
        />
        <TextView
                android:layout_toEndOf="@id/txtJumlahPendataan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kali"
                app:fontFamily="@font/gotham_light"
                android:textSize="@dimen/average"
                android:gravity="center"
        />
        <TextView
                android:id="@+id/terakhirMelakukan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/andatelah"
                android:text="@string/terakhirmelakukan"
                app:fontFamily="@font/gotham_light"
                android:textSize="@dimen/average"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/terakhirMelakukan"
                android:id="@+id/waktuPendataan"
                android:text="@string/waktu"
                android:layout_below="@id/andatelah"
                android:textSize="12sp"
                android:layout_marginStart="5dp"
                app:fontFamily="@font/gotham_semibold"
        />
        <TextView
                android:id="@+id/bergabungpada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/terakhirMelakukan"
                android:text="@string/bergabungpada"
                android:textSize="@dimen/average"
                app:fontFamily="@font/gotham_light"
        />
        <TextView
                android:id="@+id/waktuBergabung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/bergabungpada"
                android:layout_below="@id/terakhirMelakukan"
                android:text="@string/waktu"
                android:textSize="12sp"
                app:fontFamily="@font/gotham_semibold"
        />

    </RelativeLayout>

    <Button
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/infoPendataan"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:text="@string/logout"
            app:fontFamily="@font/gotham_semibold"
            android:textColor="#50b178"
            android:textSize="14sp"
            android:background="@drawable/rectangle"
            android:gravity="center"
    />

</android.support.constraint.ConstraintLayout>