<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <LinearLayout 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content"
            android:orientation="vertical">
        
        <RelativeLayout 
                android:layout_width="match_parent" 
                android:layout_height="170dp"
                android:background="@drawable/background"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="-20dp"
        >
            
            <ImageView 
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="5dp"
                    android:id="@+id/imgKategori"
                    android:src="@drawable/rumahsehaticon"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/app_name"
                    android:background="@drawable/bulet"
                    android:backgroundTint="#9C8F8E8E"
                    tools:ignore="UnusedAttribute"/>

            <LinearLayout
                    android:layout_toEndOf="@id/imgKategori"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
            >
                <TextView
                        android:text="@string/kategori"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#1c8572"
                        android:textSize="@dimen/average"
                        android:fontFamily="@font/gotham_light"
                />
                <TextView
                        android:text="@string/rumahsehat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#1c8572"
                />

            </LinearLayout>

        </RelativeLayout>

        <android.support.v7.widget.CardView
                android:id="@+id/cardKategori"
                android:layout_marginTop="-50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="15dp"
                app:contentPaddingBottom="10dp"
        >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
            >
                <LinearLayout
                        android:id="@+id/infoKepalaKeluarga"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="5dp"
                >
                    <ImageView
                            android:contentDescription="@string/app_name"
                            android:layout_margin="15dp"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/profileicon"
                            android:layout_gravity="center"
                    />
                    <RelativeLayout
                            android:layout_weight="3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                    >
                        <TextView
                                android:id="@+id/nkk"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/namakk"
                                android:textColor="#1c8572"
                                android:fontFamily="@font/gotham_light"
                                android:textSize="@dimen/average"
                        />
                        <TextView
                                android:layout_below="@id/nkk"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/contohnamakk"
                                android:textSize="@dimen/medium"
                        />

                    </RelativeLayout>

                </LinearLayout>
                <LinearLayout
                        android:layout_margin="5dp"
                        android:id="@+id/infoNomorKK"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                >
                    <ImageView
                            android:contentDescription="@string/app_name"
                            android:layout_margin="15dp"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            android:src="@drawable/nomorkk"
                    />
                    <RelativeLayout
                            android:layout_weight="3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                    >
                        <TextView
                                android:id="@+id/nokk"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nomorkk"
                                android:textColor="#1c8572"
                                android:fontFamily="@font/gotham_light"
                                android:textSize="@dimen/average"
                        />
                        <TextView
                                android:id="@+id/nomorKK"
                                android:layout_below="@id/nokk"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/contohnomorkk"
                                android:textSize="@dimen/medium"
                        />

                    </RelativeLayout>

                </LinearLayout>
                <LinearLayout
                        android:layout_margin="5dp"
                        android:id="@+id/infoAlamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                >
                    <ImageView
                            android:contentDescription="@string/app_name"
                            android:layout_margin="15dp"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            android:src="@drawable/location"
                    />
                    <RelativeLayout
                            android:layout_weight="3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">
                        <TextView
                                android:id="@+id/txtAlamat"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Alamat"
                                android:textColor="#1c8572"
                                android:fontFamily="@font/gotham_light"
                                android:textSize="@dimen/average"
                        />
                        <TextView
                                android:id="@+id/namaJalan"
                                android:layout_below="@id/txtAlamat"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/namajalan"
                                android:textSize="@dimen/medium"
                        />
                        <TextView
                                android:id="@+id/noRTRW"
                                android:layout_below="@id/namaJalan"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rtrw"
                                android:textSize="@dimen/medium"
                        />
                        <TextView
                                android:id="@+id/kelurahanKecamatan"
                                android:layout_below="@id/noRTRW"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/kelurahankecamatan"
                                android:textSize="@dimen/medium"
                        />

                    </RelativeLayout>

                </LinearLayout>
                <LinearLayout
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                >
                    <ImageView
                            android:contentDescription="@string/app_name"
                            android:layout_margin="15dp"
                            android:layout_width="25dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:src="@drawable/skorakhiricon"
                    />
                    <RelativeLayout
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                    >
                        <TextView
                                android:id="@+id/sa"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/skorakhir"
                                android:textColor="#1c8572"
                                android:fontFamily="@font/gotham_light"
                                android:textSize="@dimen/average"
                        />
                        <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/sa"
                                android:background="#F30202"
                        >
                        <TextView
                                android:id="@+id/SkorAkhir"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/contohskor"
                                android:textSize="@dimen/medium"
                                android:textColor="#ffffff"
                        />
                        <TextView
                                android:id="@+id/garismiring"
                                android:layout_toEndOf="@id/SkorAkhir"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/garing"
                                android:textSize="@dimen/medium"
                                android:textColor="#ffffff"
                        />
                        <TextView
                                android:layout_marginStart="5dp"
                                android:id="@+id/status"
                                android:layout_toEndOf="@id/garismiring"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Status"
                                android:textSize="@dimen/medium"
                                android:textColor="#ffffff"
                        />
                        </RelativeLayout>

                    </RelativeLayout>

                </LinearLayout>
                <LinearLayout
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                >
                    <ImageView
                            android:contentDescription="@string/app_name"
                            android:layout_margin="15dp"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            android:src="@drawable/titikkoordinat"
                    />
                    <RelativeLayout
                            android:layout_weight="2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                    >
                        <TextView
                                android:id="@+id/tk"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/titikkoordinat"
                                android:textColor="#1c8572"
                                android:fontFamily="@font/gotham_light"
                                android:textSize="@dimen/average"
                        />
                        <TextView
                                android:id="@+id/titikKoordinatX"
                                android:layout_below="@id/tk"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/koordinatx"
                                android:textSize="@dimen/medium"
                        />
                        <TextView
                                android:id="@+id/koma"
                                android:layout_toEndOf="@id/titikKoordinatX"
                                android:layout_below="@id/tk"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/koma"
                                android:textSize="@dimen/medium"
                        />
                        <TextView
                                android:layout_marginStart="5dp"
                                android:id="@+id/titikKoordinatY"
                                android:layout_toEndOf="@id/koma"
                                android:layout_below="@id/tk"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/koordinaty"
                                android:textSize="@dimen/medium"
                        />

                    </RelativeLayout>

                </LinearLayout>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:orientation="horizontal"
                        android:background="@drawable/logoutbutton"
                        android:padding="4dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                >
                    <ImageView
                            android:contentDescription="@string/app_name"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/directme"
                            android:layout_centerVertical="true"
                            android:padding="2dp"
                    />
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/directme"
                            android:textSize="@dimen/average"
                            android:textColor="#1c8572"
                            android:layout_centerInParent="true"
                    />

                </RelativeLayout>
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:orientation="horizontal"
                        android:background="@drawable/editbg"
                        android:backgroundTint="#50b178"
                        android:padding="4dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        tools:ignore="UnusedAttribute">
                    <ImageView
                            android:contentDescription="@string/app_name"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/edit"
                            android:tint="#ffffff"
                            android:layout_centerVertical="true"
                            android:padding="2dp"
                    />
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/editdata"
                            android:textSize="@dimen/average"
                            android:textColor="#ffffff"
                            android:layout_centerInParent="true"
                    />

                </RelativeLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>



    </LinearLayout>
    
</ScrollView>